# cpp-lua-testcase

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Roadmap.md  TODO.md  vcpkg.json
dev/cmake/: BuildApp.cmake
res/: main.lua  test.lua
src/: CMakeLists.txt  main.cpp
src/debug/: Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
src/io/: ResourceLoader.cpp  ResourceLoader.hpp
src/scripting/: LuaScript.cpp  LuaScript.hpp  LuaState.cpp  LuaState.hpp  LuaUtil.hpp  ScriptFunctions.cpp  ScriptFunctions.hpp  Scripting.cpp  Scripting.hpp  Wrapper.cpp  Wrapper.hpp
src/scripting/libs/: API.hpp  liblog.cpp  libscript.cpp
src/scripting/lua/: LuaCommon.hpp  LuaState.cpp  LuaState.hpp  LuaStateObject.cpp  LuaStateObject.hpp  LuaWrapper.cpp  LuaWrapper.hpp
src/scripting/lua/libs/: API.hpp  liblog.cpp  libscript.cpp  loglib.cpp  scriptlib.cpp
test/: CMakeLists.txt  debug.cpp
test/debug/: Logger.cpp  Timer.cpp
test/io/: ResourceLoader.cpp
