project(CppLuaSrc)

set(CMAKE_CXX_STANDARD 11)

file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

if(${SOURCES})
    add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
endif()
